@@ -2357,11 +2357,6 @@ body.x-body-masked .x-window-plain .x-window-mc {
 	padding-right: 3px;
 }
 
-#donateWindow.t3-window .x-window-body.x-window-body-noborder {
-	padding-left: 100px;
-	background: url(../images/general/donate_teaser.png) no-repeat 25px 10px !important;
-}
-
 .icon-collapse-all {
 	background-image: url("images/tree/collapse-all.gif") !important;
 }
